--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "@truffle/hdwallet-provider": "^2.1.6",
-    "truffle": "^5.7.5"
+    "truffle": "^5.7.5",
+    "csv-parse": "^4.16.3"
   },
   "devDependencies": {
     "@openzeppelin/contracts": "~4.7.2",
